# uni-testing-furniture

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
pages/: base_page.py  cart_page.py  catalog_page.py  favorite_page.py  main_page.py  product_page.py  search_results_page.py
tests/: conftest.py  test_cart.py  test_favorites.py  test_filter.py  test_product_card.py  test_search.py
utils/: helpers.py  logger.py
