[project]
name = "uni-testing-furniture"
version = "0.1.0"
description = ""
authors = [
    {name = "Wild",email = "zoppoz4100@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "allure-pytest (>=2.15.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
