[project]
name = "uni-testing-furniture"
version = "0.1.0"
description = "UI-testing solution for mebelmart-saratov using Playwright and Allure for reporting."
authors = [
    {name = "Wild",email = "zoppoz4100@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "allure-pytest (>=2.15.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.6,<0.16.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)"
]
